...
            android:text="@string/resetBtn"
            android:textSize="14sp"
            android:textColor="@color/buttonText"
            />

        <Button
            android:id="@+id/novaBiljkaBtn"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:layout_weight="1"

            android:backgroundTint="@color/accentColor"
            android:text="@string/addPlant"
...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintTop_toBottomOf="@id/topLinearni"
        app:layout_constraintBottom_toTopOf="@+id/biljkeRV"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pretragaText"
            android:layout_marginBottom="10dp"
...
